--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "mongoose": "6.7.2",
     "mysql2": "2.3.3"
   },
   "devDependencies": {
