--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/baotruong0901/backend-restful-api#readme",
   "dependencies": {
+    "api-query-params": "5.4.0",
+    "body-parser": "^1.20.2",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-fileupload": "1.4.0",
+    "mongodb": "4.13.0",
     "mongoose": "6.7.2",
+    "mongoose-delete": "0.5.4",
     "mysql2": "2.3.3"
   },
   "devDependencies": {
